--- a/overscroll/build.gradle
+++ b/overscroll/build.gradle
@@ -24,5 +24,5 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:design:26.1.0'
+    api 'com.android.support:design:26.1.0'
 }
